# FedProClient

./: .gitignore  CONTRIBUTING.md  README.md  build.xml  fedproclient.properties  fedproclient.xml  settings.gradle.kts
cpp/: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md
cpp/api/HLA_1516-2010/: LogicalTimeDouble.h  LogicalTimeDoubleFactory.h  LogicalTimeDoubleInterval.h
cpp/api/HLA_1516-2010/RTI/: Exception.h  FederateAmbassador.h  Handle.h  LogicalTime.h  LogicalTimeFactory.h  LogicalTimeInterval.h  NullFederateAmbassador.h  RTIambassador.h  RTIambassadorFactory.h  SpecificConfig.h
cpp/api/HLA_1516-2025/RTI/: Enums.h  Exception.h  FederateAmbassador.h  Handle.h  NullFederateAmbassador.h  RTI1516.h  RTIambassador.h  RTIambassadorFactory.h  RangeBounds.h  RtiConfiguration.h  SpecificConfig.h  Typedefs.h  VariableLengthData.h
cpp/api/HLA_1516-202X/RTI/: Enums.h  Exception.h  FederateAmbassador.h  Handle.h  NullFederateAmbassador.h  RTI1516.h  RTIambassador.h  RTIambassadorFactory.h  RangeBounds.h  RtiConfiguration.h  SpecificConfig.h  Typedefs.h  VariableLengthData.h
cpp/cmake/: FedProAppHelpers.cmake  FedProTargetHelpers.cmake  FindVcToolset.cmake
cpp/cmake/toolchains/: common.cmake  linux_amd64_gcc.cmake  linux_arm64_gcc.cmake  linux_x86_gcc.cmake  macos_amd64_arm64_clang.cmake  msvc.cmake  windows_amd64_msvc.cmake  windows_x86_msvc.cmake
cpp/include/: FedPro.h
cpp/include/fedpro/: Aliases.h  Config.h  EofException.h  FedProExceptions.h  IOException.h  Logger.h  PersistentSession.h  ProgressiveDelayResumeStrategy.h  Properties.h  ResumeStrategy.h  Session.h  Settings.h  SimpleResumeStrategy.h  Socket.h  Transport.h  TransportFactory.h
cpp/sample/: CMakeLists.txt  Chat-evolved.xml  Chat-hla4.xml  Chat.cpp
cpp/sample/src/: Chat.cpp
cpp/sample_evolved/: CMakeLists.txt  Chat-evolved.xml  Chat.cpp
cpp/sample_evolved/src/: Chat.cpp
cpp/src/: CMakeLists.txt
cpp/src/fedpro/: FedPro.cpp  FedProException.cpp
cpp/src/fedpro/services-2010/: FederateAmbassadorAdapter.cpp  FederateAmbassadorAdapter.h  RTIambassadorClientAdapter.cpp  RTIambassadorClientAdapter.h  RTIambassadorFactory.cpp
cpp/src/fedpro/services-common/: ClientConverter.cpp  ClientConverter.h  ClientSession.cpp  ClientSession.h  ConveyedRegionHandleImpl.cpp  ConveyedRegionHandleImpl.h  Exception.cpp  FederateAmbassador.cpp  FederateAmbassadorDispatcher.cpp  FederateAmbassadorDispatcher.h  FomModule.cpp  FomModule.h  FomModuleLoader.cpp  FomModuleLoader.h  FomModuleSet.cpp  FomModuleSet.h  Handle.h  HandleImplementation.cpp  HandleImplementation.h  JoinResult.cpp  JoinResult.h  LogicalTimeFactory.cpp  LogicalTimeFactoryFactory.cpp  NullFederateAmbassador.cpp  QueuedCallback.cpp  QueuedCallback.h  RTITypedefs.cpp  RTITypedefs.h  RTIambassador.cpp  RTIambassadorClient.cpp  RTIambassadorClient.h  RTIambassadorClientGenericBase.cpp  RTIambassadorClientGenericBase.h  RTIambassadorClient_connect_callbacks.cpp  RTIcompat.h  RangeBounds.cpp  RegionHandleImplementation.cpp  RegionHandleImplementation.h  RtiConfiguration.cpp  RtiConfiguration.h  (+5 more)
cpp/src/fedpro/services-hla4/: HLAnoCredentials.cpp  HLAplainTextPassword.cpp  RTIambassadorClientAdapter.cpp  RTIambassadorClientAdapter.h  RTIambassadorFactory.cpp
cpp/src/fedpro/session/: AtomicSequenceNumber.cpp  AtomicSequenceNumber.h  ConcurrentHashMap.h  LogUtil.cpp  LogUtil.h  MessageType.cpp  MessageType.h  MessageWriter.cpp  MessageWriter.h  PersistentSessionImpl.cpp  PersistentSessionImpl.h  ProgressiveDelayResumeStrategy.cpp  SequenceNumber.cpp  SequenceNumber.h  SessionImpl.cpp  SessionImpl.h  SessionSettings.h  SessionUtils.h  SimpleResumeStrategy.cpp  SocketWriter.cpp  SocketWriter.h  ThreadPool.cpp  ThreadPool.h  TimeoutTimer.cpp  TimeoutTimer.h
cpp/src/fedpro/transport/: Socket.cpp  TcpSocket.cpp  TcpSocket.h  TcpTransport.cpp  TcpTransport.h  TlsTransport.cpp  TlsTransport.h  TransportBase.cpp  TransportFactory.cpp  TransportFactoryImpl.h  TransportImplBase.h  TransportSettings.h  WebsocketSecureTransport.cpp  WebsocketSecureTransport.h  WebsocketTransport.cpp  WebsocketTransport.h
cpp/src/fedpro/utility/: BlockingQueue.h  FixedRateExecutor.cpp  FixedRateExecutor.h  InterruptibleCondition.cpp  InterruptibleCondition.h  Logger.cpp  LoggerInitializer.cpp  LoggerInitializer.h  MovingStats.cpp  MovingStats.h  MovingStatsNoOp.h  NannyLock.cpp  NannyLock.h  Properties.cpp  (+9 more)
cpp/test/: CMakeLists.txt  MockModule.xml  StaticTestsInitializer.cpp  StaticTestsInitializer.h
cpp/test/services/: TestClientConverter_Objects.cpp  TestClientConverter_Objects.h  TestClientConverter_Responses.cpp  TestClientConverter_strings_enums.cpp  TestClientGenericBase.cpp  TestExtractAndRemoveClientSettings.cpp  TestSettingsParser.cpp  type_traits_util.cpp
cpp/test/services-2010/: TestRTIambassadorClientEvolved.cpp
cpp/test/services-2024/: TestRTIAmbassador.cpp  TestRTIAmbassadorClientHla4.cpp
cpp/test/services-2025/: TestRTIAmbassador.cpp  TestRTIAmbassadorClientHla4.cpp
cpp/test/services-common/: RTI_util.h  TestClientConverter.h  TestClientConverter_Handles.cpp  TestClientConverter_Objects.cpp  TestClientConverter_Objects.h  TestClientConverter_Responses.cpp  TestClientConverter_strings_enums.cpp  TestClientGenericBase.cpp  TestFomModule.cpp  TestLibRti.cpp  TestSettingsParser.cpp  type_traits_util.cpp
cpp/test/session/: TestAtomicSequenceNumber.cpp  TestByteWriter.cpp  TestCircularBuffer.cpp  TestHistoryBuffer.cpp  TestRateLimitedBuffer.cpp  TestRoundRobinBuffer.cpp  TestSequenceNumber.cpp  TestSession.cpp
cpp/test/transport/: TestTcpSocket.cpp
cpp/test/utility/: BrokenSocket.cpp  BrokenSocket.h  LocalRateLimiter.cpp  LocalRateLimiter.h  MemorySocket.cpp  MemorySocket.h  MemoryTransport.cpp  MemoryTransport.h  PacketFactory.cpp  PacketFactory.h  SocketSupplierTransport.cpp  SocketSupplierTransport.h  StateWaiter.cpp  StateWaiter.h  TestBit.cpp  TestConcurrentHashMap.cpp  TestInterruptibleCondition.cpp  TestLoggerInitializer.cpp  TestMovingStats.cpp  TestStringUtil.cpp  TestString_view.cpp  TestThreadPool.cpp  TestTimeoutTimer.cpp
(+3895 files in other folders)
